config/kubernetes/k8s/minimal-stage/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canton-otc-https
  namespace: canton-otc-minimal-stage
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`stage.minimal.build.infra.1otc.cc`)
    kind: Rule
    middlewares:
    - name: canton-otc-minimal-stage-security-headers
    services:
    - name: canton-otc-service
      port: 80
  tls:
    secretName: canton-otc-minimal-stage-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canton-otc-http-redirect
  namespace: canton-otc-minimal-stage
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`stage.minimal.build.infra.1otc.cc`)
    kind: Rule
    services:
    - name: canton-otc-service
      port: 80
    middlewares:
    - name: canton-otc-minimal-stage-https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: canton-otc-minimal-stage-https-redirect
  namespace: canton-otc-minimal-stage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: canton-otc-minimal-stage-security-headers
  namespace: canton-otc-minimal-stage
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: false
    contentTypeNosniff: true
    referrerPolicy: "strict-origin-when-cross-origin"
    customResponseHeaders:
      Content-Security-Policy: "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://widget.intercom.io https://js.intercomcdn.com https://js.intercomcdn.eu https://*.intercom.io https://*.intercomcdn.com; style-src 'self' 'unsafe-inline' blob: https://js.intercomcdn.com https://js.intercomcdn.eu https://widget.intercom.io https://*.intercomcdn.com; img-src 'self' data: blob: https://js.intercomcdn.com https://js.intercomcdn.eu https://widget.intercom.io https://downloads. [...]
      Permissions-Policy: "geolocation=(), microphone=(), camera=(), payment=()"
      X-Frame-Options: "SAMEORIGIN"
